<resources>
    <string name="app_name">E-Complaint</string>
    <string name="api_connect">https://fbc2-118-100-165-78.ngrok.io/e-complain</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ICNo">icNo</string>
    <string name="profile_name">Profile Name</string>
    <string name="phone_no">Phone No</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="logout">logout</string>
    <string name="welcome">welcome</string>
    <string name="complaint">Complaint</string>
    <string name="forum">forum</string>
</resources>